Update dependencies and configuration for Tailwind CSS integration; add postcss-load-config and adjust PostCSS setup. Clean up Meteor package versions and remove unused CSS rules.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@babel/runtime": "^7.23.5",
     "@swc/helpers": "^0.5.17",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/react-router-dom": "^5.3.3",
     "meteor-node-stubs": "^1.2.12",
+    "postcss-load-config": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.5"
