--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.5",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
     "@swc/helpers": "^0.5.17",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/react-router-dom": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "meteor-node-stubs": "^1.2.12",
     "postcss-load-config": "^6.0.1",
     "react": "^18.2.0",
